@@ -57,6 +57,9 @@
     <File name="./MonoDevelop.Gettext/GettextFeature.cs" subtype="Code" buildaction="Compile" />
     <File name="./MonoDevelop.Gettext/GettextFeatureWidget.cs" subtype="Code" buildaction="Compile" />
     <File name="./gtk-gui/MonoDevelop.Gettext.GettextFeatureWidget.cs" subtype="Code" buildaction="Compile" />
+    <File name="./MonoDevelop.Gettext/MakefileHandler.cs" subtype="Code" buildaction="Compile" />
+    <File name="./templates/Makefile.template" subtype="Code" buildaction="EmbedAsResource" />
+    <File name="./templates/Makefile.am.template" subtype="Code" buildaction="EmbedAsResource" />
   </Contents>
   <References>
     <ProjectReference type="Gac" localcopy="True" refto="System, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
@@ -76,6 +79,7 @@
     <ProjectReference type="Gac" localcopy="True" refto="gtk-sharp, Version=2.8.0.0, Culture=neutral, PublicKeyToken=35e10195dab3c99f" />
     <ProjectReference type="Gac" localcopy="True" refto="pango-sharp, Version=2.8.0.0, Culture=neutral, PublicKeyToken=35e10195dab3c99f" />
     <ProjectReference type="Project" localcopy="False" refto="MonoDevelop.Deployment" />
+    <ProjectReference type="Project" localcopy="False" refto="MonoDevelop.Autotools" />
   </References>
   <MonoDevelop.Autotools.MakefileInfo IntegrationEnabled="True" RelativeMakefileName="./Makefile.am" BuildTargetName="" CleanTargetName="" SyncReferences="True" IsAutotoolsProject="True" RelativeConfigureInPath="../../">
     <BuildFilesVar Sync="True" Name="FILES" />
