@@ -1,3 +1,10 @@
+2007-08-10  Lluis Sanchez Gual <lluis@novell.com> 
+
+	* gtk-gui/gui.stetic, MonoDevelop.Gettext.addin.xml,
+	  MonoDevelop.Gettext.mdp, Makefile.am,
+	  MonoDevelop.Gettext/MakefileHandler.cs, templates/Makefile.am.template,
+	  templates/Makefile.template: Added support for makefile generation.
+
 2007-08-09  Mike Krüger <mkrueger@novell.com> 
 
 	* MonoDevelop.Gettext.addin.xml: Changed addin path.
